workshop04/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    name: wp-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  rules:
    - host: wp-146.190.4.201.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wp-svc
                port:
                  number: 80
