workshop04/db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    name: db-svc
spec:
  clusterIP: None
  selector:
    name: db-po
  ports:
    - port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    name: db-deploy
  
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db-po
  template:
    metadata:
      name: db-po
      labels:
        name: db-po
    spec:
      volumes:
        - name: db-vol
          persistentVolumeClaim:
            claimName: mysql-1gi-pvc
      containers:
        - name: db
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-vol
              mountPath: /var/lib/mysql

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-db-all
  labels:
    name: deny-db-all
spec:
  podSelector:
    matchLabels:
      name: db-po
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inbound-wp
  labels:
    name: inbound-wp
spec:
  podSelector:
    matchLabels:
      name: db-po
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: wp-po
      ports:
        - port: 3306
          protocol: TCP
