workshop04/wp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
  labels:
    name: wp-svc
spec:
  type: ClusterIP
  selector:
    name: wp-po
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deploy
  labels:
    name: wp-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      name: wp-po

  template:
    metadata:
      name: wp-po
      labels:
        name: wp-po
    spec:
      volumes:
        - name: wp-vol
          persistentVolumeClaim:
            claimName: wp-1gi-pvc
      containers:
        - name: wp
          image: wordpress:6.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-vol
              mountPath: /var/www/html

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-wp-all
  labels:
    name: deny-wp-all
spec:
  podSelector:
    matchLabels:
      name: wp-po
  policyTypes:
  - Ingress
  - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inbound-http
  labels:
    name: inbound-http
spec:
  podSelector:
    matchLabels:
      name: wp-po
  policyTypes:
  - Ingress
  ingress:
    - ports:
        - port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: outbound-db
  labels:
    name: outbound-db
spec:
  podSelector:
    matchLabels:
      name: wp-po
  policyTypes:
  - Egress
  egress:
  # - {}
  ## adding outbound to 3306, does not work
  # - to:
  #   - podSelector:
  #       matchLabels:
  #         name: db-po
  #   ports:
  #     - port: 3306
  #       protocol: TCP
